@@ -321,6 +321,9 @@
 #define wxUSE_NOTIFICATION_MESSAGE 0
 #endif
 
+#undef wxUSE_PREFERENCES_EDITOR
+#define wxUSE_PREFERENCES_EDITOR 0
+
 #if wxUSE_PROPGRID
 #undef wxUSE_PROPGRID
 #define wxUSE_PROPGRID 0
