@@ -610,6 +610,7 @@ wxGTK:
 
 wxMSW:
 
+- Disable the use of compiler TLS to avoid mysterious crashes in plugins.
 - Fix blank wxBitmapComboBox dropdown appearance.
 - Fix clicking on checkboxes in wxDataViewCtrl.
 - Make "%lu" work with size_t arguments under Win64 (laro).
